<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrnd"
    tools:context=".CardioWorkout">

    <Button
        android:id="@+id/mntnbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/cardiobtn6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hykneebtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/crunches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/cardiobtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pshups" />

    <Button
        android:id="@+id/plank"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/cardiobtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crunches" />

    <Button
        android:id="@+id/jumpingjackbtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/cardiobtn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plank" />

    <Button
        android:id="@+id/hykneebtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/cardiobtn5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jumpingjackbtn" />

    <Button
        android:id="@+id/pshups"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/cardiobtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crdiowrkts"
        android:layout_width="160dp"
        android:layout_height="86dp"
        android:text="@string/cdtxt"
        android:textAlignment="center"
        android:textColor="#FF7F50"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pshups"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>