<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <TextView
        android:id="@+id/tvAccount2"
        android:layout_width="411dp"
        android:layout_height="34dp"
        android:background="@color/orange"
        android:text="@string/settingsAccount"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGeneral"
        android:layout_width="411dp"
        android:layout_height="34dp"
        android:layout_marginTop="52dp"
        android:background="@color/orange"
        android:text="@string/general"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogOut" />

    <TextView
        android:id="@+id/tvHelp"
        android:layout_width="411dp"
        android:layout_height="34dp"
        android:layout_marginTop="52dp"
        android:background="@color/orange"
        android:text="@string/help"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme" />

    <TextView
        android:id="@+id/tvLinkDeleteAccount"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="@string/deleteAcc"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLinkEditProfile" />

    <TextView
        android:id="@+id/tvLogOut"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="@string/logout"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLinkDeleteAccount" />

    <TextView
        android:id="@+id/tvFAQ"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="@string/faq"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutUs"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="@string/aboutUs"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelp" />

    <TextView
        android:id="@+id/tvLinkEditProfile"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:text="@string/editProfile"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAccount2" />

    <Switch
        android:id="@+id/switchTheme"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/theme"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPushNotification" />

    <Switch
        android:id="@+id/switchPushNotification"
        android:layout_width="351dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:text="@string/pushNot"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGeneral" />

</androidx.constraintlayout.widget.ConstraintLayout>