<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgrnd"
    tools:context=".CardioWorkout">

    <Button
        android:id="@+id/pcurl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/armbtn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bicurl" />

    <Button
        android:id="@+id/tricep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/armbtn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pcurl" />

    <Button
        android:id="@+id/barcurl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:text="@string/armbtn4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tricep" />

    <Button
        android:id="@+id/bicurl"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/armbtn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/armwrkts"
        android:layout_width="160dp"
        android:layout_height="86dp"
        android:text="@string/armtxt"
        android:textAlignment="center"
        android:textColor="#FF7F50"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/bicurl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>